# ants-haskell

./: .gitignore  Ants.hs  Bot.hs  Main.hs  MyBot.hs  README  Util.hs  ants-haskell.cabal  createZip.sh  tutorial.sh
bot/: Ants.hs  Bot.hs  Util.hs
maps/: ring.map
test/: Test.hs
